--- a/clients/modern-indicators.theme.css
+++ b/clients/modern-indicators.theme.css
@@ -47,139 +47,139 @@
   --indicator-connected-hover-background: hsla(var(--indicator-connected)/0.25);
 }
 
-.containerDefault_ae2ea4,
-.containerDragBefore__257b9 {
+.containerDefault_f6f816,
+.containerDragBefore_f6f816 {
   margin: 2px 0;
   border-radius: var(--indicator-rounding);
   border-left: var(--indicator-border-size) var(--indicator-border-style) transparent;
 }
-.containerDefault_ae2ea4 .link_ddbb36,
-.containerDragBefore__257b9 .link_ddbb36 {
+.containerDefault_f6f816 .link_d8bfb3,
+.containerDragBefore_f6f816 .link_d8bfb3 {
   background: transparent !important;
 }
-.containerDefault_ae2ea4.wrapper__612a5,
-.containerDragBefore__257b9.wrapper__612a5 {
+.containerDefault_f6f816.wrapper_d8bfb3,
+.containerDragBefore_f6f816.wrapper_d8bfb3 {
   padding-left: 8px;
 }
-.containerDefault_ae2ea4:hover,
-.containerDragBefore__257b9:hover {
+.containerDefault_f6f816:hover,
+.containerDragBefore_f6f816:hover {
   background-color: var(--indicator-hover);
 }
-.containerDefault_ae2ea4:has(.modeSelected__473f1),
-.containerDragBefore__257b9:has(.modeSelected__473f1) {
+.containerDefault_f6f816:has(.modeSelected_d8bfb3),
+.containerDragBefore_f6f816:has(.modeSelected_d8bfb3) {
   border-left-color: var(--indicator-selected-border);
   background-color: var(--indicator-selected-background);
 }
-.containerDefault_ae2ea4:has(.modeSelected__473f1):hover,
-.containerDragBefore__257b9:has(.modeSelected__473f1):hover {
+.containerDefault_f6f816:has(.modeSelected_d8bfb3):hover,
+.containerDragBefore_f6f816:has(.modeSelected_d8bfb3):hover {
   background-color: var(--indicator-selected-hover-background);
 }
-.containerDefault_ae2ea4:has(.modeSelected__473f1) .link_ddbb36 svg,
-.containerDragBefore__257b9:has(.modeSelected__473f1) .link_ddbb36 svg {
+.containerDefault_f6f816:has(.modeSelected_d8bfb3) .link_d8bfb3 svg,
+.containerDragBefore_f6f816:has(.modeSelected_d8bfb3) .link_d8bfb3 svg {
   color: var(--indicator-selected-border);
 }
-.containerDefault_ae2ea4:has(.modeUnreadImportant__35358),
-.containerDragBefore__257b9:has(.modeUnreadImportant__35358) {
+.containerDefault_f6f816:has(.modeUnreadImportant_d8bfb3),
+.containerDragBefore_f6f816:has(.modeUnreadImportant_d8bfb3) {
   border-left-color: var(--indicator-unread-border);
   background-color: var(--indicator-unread-background);
 }
-.containerDefault_ae2ea4:has(.modeUnreadImportant__35358):hover,
-.containerDragBefore__257b9:has(.modeUnreadImportant__35358):hover {
+.containerDefault_f6f816:has(.modeUnreadImportant_d8bfb3):hover,
+.containerDragBefore_f6f816:has(.modeUnreadImportant_d8bfb3):hover {
   background-color: var(--indicator-unread-hover-background);
 }
-.containerDefault_ae2ea4:has(.modeUnreadImportant__35358) .unread__48cf4,
-.containerDragBefore__257b9:has(.modeUnreadImportant__35358) .unread__48cf4 {
+.containerDefault_f6f816:has(.modeUnreadImportant_d8bfb3) .unread_d8bfb3,
+.containerDragBefore_f6f816:has(.modeUnreadImportant_d8bfb3) .unread_d8bfb3 {
   display: none;
 }
-.containerDefault_ae2ea4:has(.modeUnreadImportant__35358) .link_ddbb36 svg,
-.containerDragBefore__257b9:has(.modeUnreadImportant__35358) .link_ddbb36 svg {
+.containerDefault_f6f816:has(.modeUnreadImportant_d8bfb3) .link_d8bfb3 svg,
+.containerDragBefore_f6f816:has(.modeUnreadImportant_d8bfb3) .link_d8bfb3 svg {
   color: var(--indicator-unread-border);
 }
-.containerDefault_ae2ea4:has(.mentionsBadge__3d019),
-.containerDragBefore__257b9:has(.mentionsBadge__3d019) {
+.containerDefault_f6f816:has(.mentionsBadge_e2a798),
+.containerDragBefore_f6f816:has(.mentionsBadge_e2a798) {
   border-left-color: var(--indicator-unread-mention-border);
   background-color: var(--indicator-unread-mention-background);
 }
-.containerDefault_ae2ea4:has(.mentionsBadge__3d019):hover,
-.containerDragBefore__257b9:has(.mentionsBadge__3d019):hover {
+.containerDefault_f6f816:has(.mentionsBadge_e2a798):hover,
+.containerDragBefore_f6f816:has(.mentionsBadge_e2a798):hover {
   background-color: var(--indicator-unread-mention-hover-background);
 }
-.containerDefault_ae2ea4:has(.mentionsBadge__3d019) .link_ddbb36 svg,
-.containerDragBefore__257b9:has(.mentionsBadge__3d019) .link_ddbb36 svg {
+.containerDefault_f6f816:has(.mentionsBadge_e2a798) .link_d8bfb3 svg,
+.containerDragBefore_f6f816:has(.mentionsBadge_e2a798) .link_d8bfb3 svg {
   color: var(--indicator-unread-mention-border);
 }
-.containerDefault_ae2ea4:has(.modeConnected__52a8f),
-.containerDragBefore__257b9:has(.modeConnected__52a8f) {
+.containerDefault_f6f816:has(.modeConnected_d8bfb3),
+.containerDragBefore_f6f816:has(.modeConnected_d8bfb3) {
   border-left-color: var(--indicator-connected-border);
   background-color: var(--indicator-connected-background);
 }
-.containerDefault_ae2ea4:has(.modeConnected__52a8f):hover,
-.containerDragBefore__257b9:has(.modeConnected__52a8f):hover {
+.containerDefault_f6f816:has(.modeConnected_d8bfb3):hover,
+.containerDragBefore_f6f816:has(.modeConnected_d8bfb3):hover {
   background-color: var(--indicator-connected-hover-background);
 }
-.containerDefault_ae2ea4:has(.modeConnected__52a8f) .link_ddbb36 svg,
-.containerDragBefore__257b9:has(.modeConnected__52a8f) .link_ddbb36 svg {
+.containerDefault_f6f816:has(.modeConnected_d8bfb3) .link_d8bfb3 svg,
+.containerDragBefore_f6f816:has(.modeConnected_d8bfb3) .link_d8bfb3 svg {
   color: var(--indicator-connected-border);
 }
 
-.container__342a0 .spineBorder__52981 {
+.container_e1e976 .spineBorder_e1e976 {
   left: 24px;
 }
 
-.categoryItem__0608f {
+.categoryItem_c72b37 {
   margin: 2px 0;
   padding-left: 8px;
   border-radius: var(--indicator-rounding);
   border-left: var(--indicator-border-size) var(--indicator-border-style) transparent;
 }
-.categoryItem__0608f:hover {
+.categoryItem_c72b37:hover {
   background-color: var(--indicator-hover);
 }
-.categoryItem__0608f:hover .itemInner_eedb2b {
+.categoryItem_c72b37:hover .itemInner_c72b37 {
   background-color: transparent;
 }
-.categoryItem__0608f.selected__7f4cb {
+.categoryItem_c72b37.selected_e9f61e {
   border-left-color: var(--indicator-selected-border);
   color: var(--interactive-active);
   background-color: var(--indicator-selected-background);
 }
-.categoryItem__0608f.selected__7f4cb .itemInner_eedb2b {
+.categoryItem_c72b37.selected_e9f61e .itemInner_c72b37 {
   background-color: transparent;
 }
-.categoryItem__0608f.selected__7f4cb svg {
+.categoryItem_c72b37.selected_e9f61e svg {
   color: var(--indicator-selected-border);
 }
 
-.channel__0aef5 {
+.channel_c91bad {
   max-width: unset;
   margin: 2px 0;
   padding: 0 0 0 8px;
   border-radius: var(--indicator-rounding);
   border-left: var(--indicator-border-size) var(--indicator-border-style) transparent;
 }
-.channel__0aef5:hover {
+.channel_c91bad:hover {
   background-color: var(--indicator-hover);
 }
-.channel__0aef5:has(.selected__37292) {
+.channel_c91bad:has(.selected_f5eb4b) {
   border-left-color: var(--indicator-selected-border);
   background-color: var(--indicator-selected-background);
 }
-.channel__0aef5:has(.selected__37292):hover {
+.channel_c91bad:has(.selected_f5eb4b):hover {
   background-color: var(--indicator-selected-hover-background);
 }
-.channel__0aef5:has(.selected__37292) .linkButtonIcon_cff89e, .channel__0aef5:has(.selected__37292) .closeButton__116c3 {
+.channel_c91bad:has(.selected_f5eb4b) .linkButtonIcon_c91bad, .channel_c91bad:has(.selected_f5eb4b) .closeButton_c91bad {
   color: var(--indicator-selected-border);
 }
-.channel__0aef5:has(.highlighted_e2e5df) {
+.channel_c91bad:has(.highlighted_f9647d) {
   border-left-color: var(--indicator-unread-border);
   background-color: var(--indicator-unread-background);
 }
-.channel__0aef5:has(.highlighted_e2e5df):hover {
+.channel_c91bad:has(.highlighted_f9647d):hover {
   background-color: var(--indicator-unread-hover-background);
 }
-.channel__0aef5:has(.highlighted_e2e5df) .linkButtonIcon_cff89e, .channel__0aef5:has(.highlighted_e2e5df) .closeButton__116c3 {
+.channel_c91bad:has(.highlighted_f9647d) .linkButtonIcon_c91bad, .channel_c91bad:has(.highlighted_f9647d) .closeButton_c91bad {
   color: var(--indicator-unread-border);
 }
-.channel__0aef5 .interactive__0786a {
+.channel_c91bad .interactive_f5eb4b {
   background: transparent;
 }
