--- a/src/theme/channels.scss
+++ b/src/theme/channels.scss
@@ -1,62 +1,63 @@
-.containerDefault_f6f816,
-.containerDragBefore_f6f816 {
+.containerDefault_c69b6d,
+.containerDragBefore_c69b6d {
     margin: 2px 0;
     border-radius: var(--indicator-rounding);
     border-left: var(--indicator-border-size) var(--indicator-border-style) transparent;
-    .link_d8bfb3 {
+    .link__2ea32 {
         background: transparent !important;
     }
-    &.wrapper_d8bfb3 {
+    &.wrapper__2ea32 {
         padding-left: 8px;
     }
     &:hover {
         background-color: var(--indicator-hover);
     }
-    &:has(.modeSelected_d8bfb3) {
+    &:has(.modeSelected__2ea32) {
         border-left-color: var(--indicator-selected-border);
         background-color: var(--indicator-selected-background);
         &:hover {
             background-color: var(--indicator-selected-hover-background);
         }
-        .link_d8bfb3 svg {
+        .link__2ea32 svg {
             color: var(--indicator-selected-border);
         }
     }
-    &:has(.modeUnreadImportant_d8bfb3) {
+    &:has(.modeUnreadLessImportant__2ea32, .modeUnreadImportant__2ea32) {
         border-left-color: var(--indicator-unread-border);
         background-color: var(--indicator-unread-background);
         &:hover {
             background-color: var(--indicator-unread-hover-background);
         }
-        .unread_d8bfb3 {
-            display: none;
-        }
-        .link_d8bfb3 svg {
+        .link__2ea32 svg {
             color: var(--indicator-unread-border) ;
         }
     }
-    &:has(.mentionsBadge_e2a798) {
+    &:has(.mentionsBadge__933a1) {
         border-left-color: var(--indicator-unread-mention-border);
         background-color: var(--indicator-unread-mention-background);
         &:hover {
             background-color: var(--indicator-unread-mention-hover-background);
         }
-        .link_d8bfb3 svg {
+        .link__2ea32 svg {
             color: var(--indicator-unread-mention-border) ;
         }
     }
-    &:has(.modeConnected_d8bfb3) {
+    &:has(.modeConnected__2ea32) {
         border-left-color: var(--indicator-connected-border);
         background-color: var(--indicator-connected-background);
         &:hover {
             background-color: var(--indicator-connected-hover-background);
         }
-        .link_d8bfb3 svg {
+        .link__2ea32 svg {
             color: var(--indicator-connected-border) ;
         }
     }
+
+    .unread__2ea32 {
+        display: none;
+    }
 }
 
-.container_e1e976 .spineBorder_e1e976 {
+.container__5b40b .spineBorder__5b40b {
     left: 24px;
 }
